package edu.fiuba.algo3.Cosas;

public class Movimiento {
}
