package edu.fiuba.algo3.modelo;

public class Puntaje {

    private int puntaje;

    private void calcularPuntajePorMovimientos(int movimientos){
        puntaje = 0;
    }

    public int obtenerPuntaje(){
        return puntaje;
    }
}
