@startuml
'https://plantuml.com/class-diagram

class GPS{
+{static}crearGPSconNicknameYVehiculo(unNickname:String,\nunVehiculo:Vehiculo)
-agregarAlHistorial(unNickname:String,puntaje:Int)
+pedirMovimiento(unMovimiento: Movimiento): void
}
class Mapa

class Posicion

Sorpresa --> Posicion
Obstaculo --> Posicion
Vehiculo --> Posicion


/'class Turno'/

class Jugador{
/'-nickname:String'/
+{static}registrarJugador(unVehiculo:Vehiculo)
/'¡¡¡¡¡¡VER!!!!!!se puede agregar nickName '/
+moverHacia(unMovimiento: movimiento)
+obtenerPuntaje(): Puntaje
}
/'------------------------------------- '/
class Movimiento

class Arriba
class Abajo
class Derecha
class Izquierda

Arriba --|> Movimiento
Abajo --|> Movimiento
Derecha --|> Movimiento
Izquierda --|> Movimiento
/'------------------------------------- '/

class Vehiculo{
-cantidadMovimientos:int
}



class Moto{
+crearVehiculo(unModelo:String)
}
class Auto{
+crearVehiculo(unModelo:String)
}
class 4x4{
+crearVehiculo(unModelo:String)
}

Moto --|> Vehiculo
Auto --|> Vehiculo
4x4 --|> Vehiculo

/'------------------------------------- '/
class Obstaculo

class Pozo
class Piquete
class ControlPolicial

Pozo --|> Obstaculo
Piquete --|> Obstaculo
ControlPolicial --|> Obstaculo

/'------------------------------------- '/
class Sorpresa

class Favorable
class Desfavorable
class CambioDeVehiculo

Favorable --|> Sorpresa
Desfavorable --|> Sorpresa
CambioDeVehiculo --|> Sorpresa
CambioDeVehiculo ...> Vehiculo


/'------------------------------------- '/
class Puntaje

/'------------------------------------- '/

class Celda{

}

class Contenido {

}

Contenido --> "0..1" Sorpresa
Contenido --> "0..1" Obstaculo
Mapa --> "0..*"Celda
Celda -->"0..1" Contenido


/'------------------------------------- '/
Jugador *---"1" Puntaje
/'Jugador *-- Turno'/
Jugador o--"1" Vehiculo
Jugador -- Mapa
/'------------------------------------- '/
Vehiculo --> Movimiento
/'------------------------------------- '/
GPS--> Jugador
/'------------------------------------- '/

Mapa --> Vehiculo

class HistorialPuntaje{
-ranking:Hash
}

HistorialPuntaje o--> "*" Puntaje

GPS --> HistorialPuntaje

Contenido -->"0..1" Vehiculo

@enduml